test/files/errors/varAndFuncSNameError.jg
test int = 2;

_main int ()
{
    test int (number int)
    {
        number return;
    }
    
    test print;
    0 return;
}